Correción de errores

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- enlazo los estilos CSS -->
         <link rel="stylesheet" href="styles/style.css">
+        <!-- enlazo el favicon -->
         <link rel="icon" href="assets/CR7.ico" type="image/icon-x">
         <title>EXAMEN DWEC - DIW</title>
     </head>
